# Hospital-serving-robot

./: README.md
DATN_GUI/Server/: ChatProtocol.cpp  ChatProtocol.h  ClientChatWidget.cpp  ClientChatWidget.h  ClientManager.cpp  ClientManager.h  Makefile  Server  Server.pro  Server.pro.user.b6a9421  ServerManager.cpp  ServerManager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_ClientChatWidget.cpp  moc_ClientManager.cpp  moc_ServerManager.cpp  moc_mainwindow.cpp  ui_ClientChatWidget.h  ui_mainwindow.h
DATN_GUI/hospital_app/: CMakeLists.txt  CMakeLists.txt.user.5a4e90d  CMakeLists.txt.user.b6a9421  CMakeLists.txt.user.bf29d2b  CTestConfiguration.ini  DiseasePage.qml  GaugeSpeed.qml  HomeForm.ui.qml  HomeFormuiqml.qml  HomePage.qml  MapPage.qml  NavigationSender.cpp  NavigationSender.h  TemplateButton.qml  chatitemwidget.cpp  chatprotocol.cpp  chatprotocol.h  chatwindowlauncher.cpp  chatwindowlauncher.h  clientmanager.cpp  clientmanager.h  lightcontroller.cpp  lightcontroller.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  package.xml  qml.qrc  robotcontroller.cpp  robotcontroller.h  ui_chatitemwidget.h  ui_mainwindow.h
DATN_GUI/hospital_app/NaviPage/: CustomButton.qml  DiseasePage.qml  Gauge.qml  HomePage.qml  MapPage.qml  MorePage.qml  NoteDisease.qml  NoteHome.qml  NoteMore1.qml  NoteMore2.qml  NoteMore3.qml  NoteMore4.qml  NoteMore5.qml
DATN_GUI/hospital_app/NaviPage/NotePage/: MorePage.qml  NoteDisease.qml
DATN_STM32/DATN_STM32_Final/DC_PID/: DC_PID.ioc
DATN_STM32/DATN_STM32_Final/DC_PID/MDK-ARM/: DC_PID.uvguix.ACER  DC_PID.uvguix.Win  DC_PID.uvoptx  DC_PID.uvprojx
DATN_STM32/DATN_STM32_Final/DC_PID_v2.0/: DC_PID_v2.0.ioc
DATN_STM32/DATN_STM32_Final/DC_PID_v2.0/MDK-ARM/: DC_PID_v2.0.uvguix.ACER  DC_PID_v2.0.uvguix.Win  DC_PID_v2.0.uvoptx  DC_PID_v2.0.uvprojx
DATN_STM32/DATN_STM32_Final/GetEncoder/: GetEncoder.ioc
DATN_STM32/DATN_STM32_Final/GetEncoder/MDK-ARM/: GetEncoder.uvguix.ACER  GetEncoder.uvguix.Win  GetEncoder.uvoptx  GetEncoder.uvprojx
hospital_robot/: data_vel1.txt  data_vel1_filted.txt  data_vel3.txt  data_vel3_filted.txt  filter_data.py  plot.py
hospital_robot/Control_Robot/: Code_Main_Keyboard.py  Main_odom.py  Navigation.py  Receive_Command.py
hospital_robot/install/: local_setup.sh  setup.sh
hospital_robot/log/: latest_build  latest_list
hospital_robot/src/: App.py
hospital_robot/src/Qtapp/: untitled.ui
hospital_robot/src/hospital_package/: CMakeLists.txt  package.xml
hospital_robot/src/hospital_package/config/: .nav2_params.yaml.swp  hospital_robot.rviz  mapper_params_online_async.yaml  mapper_params_online_async_localization.yaml  mapper_params_online_async_loci.yaml  nav2_params.yaml  nav2_params_backup.yaml
(+2298 files in other folders)
