<?xml version="1.0"?>
<package format="3">
  <name>hospital_app</name>
  <version>0.0.1</version>
  <description>Qt and ROS2 navigation app</description>
  <maintainer email="lehuuhoa0203@gmail.com">Huu Hoa</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_typesupport_c</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
